--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class = "w-full  bg-custom-img min-h-screen bg-cover bg-center bg-fixed"></div>
+    <div id="root" class = "w-full  bg-contect_bg_color min-h-screen"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
