--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class = "w-full min-h-screen bg-cover bg-center">
+<html lang="en" class = "w-full min-h-screen bg-cover bg-center bg-contect_bg_color">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
