--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class = "w-full min-h-screen bg-cover bg-center bg-contect_bg_color">
+<html lang="en" class = "w-full min-h-screen bg-cover bg-center bg-background_color">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
@@ -28,7 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class = "w-full  bg-contect_bg_color min-h-screen"></div>
+    <div id="root" class = "w-full  bg-background_color min-h-screen"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
